// Copyright 2020-2021 The Datafuse Authors.
//
// SPDX-License-Identifier: Apache-2.0.

syntax = "proto3";

// meta data types for FuseStore
package store_meta;

message Db {
  int64 db_id = 1;
  map<string, int64> table_name_to_id = 2;
  map<int64, Table> tables = 3;
}

message Table {
  int64    table_id = 1;
  bytes    schema = 5;
  // a func(string, Vec<ReplicationGroupId>) mapping PartitionBy expr to replication group.
  // A FuseQuery process should consider this to determine where to send the
  // read or write operations.
  bytes    placement_policy = 10;
  // repeated ReplicationGroupId ReplicationGroupIds
}

// A command to create a table.
message CmdCreateTable {
  int64 db_id = 10;
  string db_name = 20;
  string table_name = 30;
  Table table = 40;
}